<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Dashboard">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/top_background"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginStart="24dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome"
                            android:textColor="@color/white"
                            android:textSize="70px"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"  />

                        <TextView
                            android:id="@+id/send"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textSize="60px"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="@+id/textView"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />

                        <ImageView
                            android:id="@+id/logout"
                            android:layout_width="38dp"
                            android:layout_height="38dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="70dp"
                            android:src="@drawable/logout"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/myactivity"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/jemput"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/oval"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.273"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/sent"
                            app:layout_constraintVertical_bias="0.0">

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/cargo"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/jemputsampah"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jemput_sampah"
                            android:textSize="35px"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/jemput"
                            app:layout_constraintStart_toStartOf="@+id/jemput"
                            app:layout_constraintTop_toBottomOf="@+id/jemput" />

                        <TextView
                            android:id="@+id/tukar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/redeem_point"
                            android:textColor="@color/white"
                            android:textSize="35px"
                            app:layout_constraintEnd_toEndOf="@+id/gift"
                            app:layout_constraintStart_toStartOf="@+id/gift"
                            app:layout_constraintTop_toBottomOf="@+id/gift" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/gift"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/oval"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.47"
                            app:layout_constraintStart_toEndOf="@+id/jemput"
                            app:layout_constraintTop_toBottomOf="@+id/sent"
                            app:layout_constraintVertical_bias="0.0">

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/gift"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <TextView
                            android:id="@+id/myActivity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aktivitas_saya"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"  />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:id="@+id/sent"
                            android:background="@drawable/whitecontainer"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="@id/myActivity"
                            app:layout_constraintVertical_bias="0.3"
                            tools:layout_editor_absoluteX="0dp">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/kirim_sampah"
                                android:textColor="@color/gray"
                                app:layout_constraintEnd_toEndOf="@+id/qtySend"
                                app:layout_constraintHorizontal_bias="0.48"
                                app:layout_constraintStart_toStartOf="@+id/imageView5"
                                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                            <TextView
                                android:id="@+id/qtySend"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/_10x"
                                android:textColor="@color/gray"
                                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                                app:layout_constraintStart_toEndOf="@+id/imageView5"
                                app:layout_constraintTop_toTopOf="@+id/imageView5" />

                            <TextView
                                android:id="@+id/qtySuccess"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/_10x"
                                android:textColor="@color/gray"
                                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                                app:layout_constraintStart_toEndOf="@+id/imageView3"
                                app:layout_constraintTop_toTopOf="@+id/imageView3" />

                            <TextView
                                android:id="@+id/qtyPoint"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="@string/_250"
                                android:textColor="@color/gray"
                                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                                app:layout_constraintStart_toEndOf="@+id/imageView4"
                                app:layout_constraintTop_toTopOf="@+id/imageView4" />

                            <TextView
                                android:id="@+id/kirimSampah"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/point"
                                android:textColor="@color/gray"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="@+id/qtyPoint"
                                app:layout_constraintStart_toStartOf="@+id/imageView4"
                                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                            <TextView
                                android:id="@+id/point"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/success"
                                android:textColor="@color/gray"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="@+id/qtySuccess"
                                app:layout_constraintStart_toStartOf="@+id/imageView3"
                                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_marginBottom="8dp"
                                android:contentDescription="@string/trash"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/trash"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.124"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.34" />

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/baseline_recycling_24"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.463"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.32" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/point"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.802"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.301" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:id="@+id/myVoc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Voucher"
                        android:textStyle="bold"
                        android:textSize="50px"
                        android:textColor="@color/gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/qtySuccess"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                    <ImageView
                        android:id="@+id/voucher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/voucher"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.802"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.301" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            app:layout_anchorGravity="bottom">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_nav" />

        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>